# QymEngine

./: .gitignore  CLAUDE.md  CMakeLists.txt  QymEngine.sln  README.md
.github/workflows/: android-debug-build.yml  windows-backend-regression.yml
QymEngine/: Path.cpp  Path.h  QymEngine.vcxproj  imgui.ini  main.cpp
QymEngine/shaders/: Particle.comp  Triangle.frag  Triangle.vert  compile.bat  vert.spv
android/: gradlew.bat  settings.gradle.kts
android-cmake/: CMakeLists.txt  VirtualJoystick.h  main.cpp
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/qymengine/app/: QymActivity.java
assets/materials/: default_lit.mat.json  default_unlit.mat.json  gold.mat.json  metal_rough.mat.json  metal_smooth.mat.json  plastic_red.mat.json
assets/scenes/: default.json  ibl_test.json  multi_light_test.json
assets/shaders/: DeferredLighting.slang  GBuffer.slang  Grid.frag  Grid.reflect.json  Grid.shaderbundle  Grid.slang  Grid.vert  Lit.frag  Lit.reflect.json  Lit.shaderbundle  Lit.slang  Shadow.shaderbundle  Shadow.slang  Sky.shaderbundle  Sky.slang  Triangle.frag  Triangle.reflect.json  Triangle.shaderbundle  Triangle.slang  Triangle.vert  Triangle_bindless.reflect.json  Unlit.frag  Unlit.reflect.json  Unlit.shaderbundle  Unlit.slang  Unlit.vert  Unlit_bindless.reflect.json  compile.bat  frag.spv  grid_frag.spv  grid_vert.spv  lit_frag.spv  lit_frag_bindless.spv  lit_vert.spv  standard_lit.shader.json  triangle_frag_bindless.spv  triangle_vert_bindless.spv  unlit.shader.json  unlit_frag.spv  unlit_frag_bindless.spv  (+3 more)
assets/shaders/ibl/: BrdfLut.shaderbundle  BrdfLut.slang  EquirectToCubemap.shaderbundle  EquirectToCubemap.slang  IrradianceConvolution.shaderbundle  IrradianceConvolution.slang  PrefilterEnvMap.shaderbundle  PrefilterEnvMap.slang
assets/shaders/postprocess/: BloomDownsample.shaderbundle  BloomDownsample.slang  BloomUpsample.shaderbundle  BloomUpsample.slang  Composite.shaderbundle  Composite.slang  DOF.shaderbundle  DOF.slang  FXAA.shaderbundle  FXAA.slang  SSAO.slang
captures/: run_tests.py
docs/design/: 2026-03-20-engine-editor-milestone-a-design.md  2026-03-20-material-system-design.md  2026-03-20-material-system-plan.md  2026-03-20-milestone-a-plan.md  2026-03-20-milestone-b-design.md  2026-03-20-milestone-b-plan.md  2026-03-20-milestone-c-design.md  2026-03-20-milestone-c-plan.md  2026-03-20-milestone-d-design.md  2026-03-20-milestone-e-design.md  2026-03-21-android-dual-mode-design.md  2026-03-21-android-mvp-design.md  2026-03-21-android-mvp-plan.md  2026-03-21-editor-enhancements-design.md  2026-03-21-glfw-to-sdl2-design.md  2026-03-21-glfw-to-sdl2-plan.md  2026-03-21-reflection-pipeline-material-system-design.md  2026-03-21-reflection-pipeline-material-system-plan.md  2026-03-22-bindless-material-set-design.md  2026-03-22-d3d11-backend-implementation.md  2026-03-22-d3d12-backend-implementation.md  2026-03-22-shader-bundle-format-design.md  2026-03-23-opengl-backend-design.md  2026-03-23-opengl-backend-plan.md  2026-03-24-post-processing-design.md  2026-03-24-post-processing-plan.md  2026-03-25-ibl-design.md  2026-03-25-ibl-plan.md  2026-03-25-metal-backend-design.md  2026-03-25-metal-backend-plan.md  2026-03-28-deferred-rendering-design.md  2026-03-28-glsl-fixup-refactor-and-android-build.md  2026-03-28-shader-hot-reload-design.md
docs/ref/: android.md  multi-backend.md  shader-system.md
docs/review/: 2026-03-21-engine-review.md
docs/superpowers/specs/: 2026-03-20-engine-editor-milestone-a-design.md
editor/: CMakeLists.txt  Clipboard.h  EditorApp.cpp  EditorApp.h  ImGuiLayer.cpp  ImGuiLayer.h  UIAutomation.cpp  UIAutomation.h  UndoManager.h  main.cpp
editor/panels/: ConsolePanel.cpp  ConsolePanel.h  HierarchyPanel.cpp  HierarchyPanel.h  InspectorPanel.cpp  InspectorPanel.h  ModelPreview.cpp  ModelPreview.h  PostProcessPanel.cpp  PostProcessPanel.h  ProjectPanel.cpp  ProjectPanel.h  SceneViewPanel.cpp  SceneViewPanel.h
engine/: CMakeLists.txt
engine/asset/: AssetManager.cpp  AssetManager.h  MaterialAsset.h  ShaderAsset.h  ShaderBundle.cpp  ShaderBundle.h  ShaderFileWatcher.cpp  ShaderFileWatcher.h
engine/core/: Application.cpp  Application.h  FileUtils.h  Log.cpp  Log.h  Window.cpp  Window.h
engine/renderer/: Buffer.cpp  Buffer.h  CommandManager.cpp  CommandManager.h  Descriptor.cpp  Descriptor.h  DescriptorLayoutCache.cpp  DescriptorLayoutCache.h  IBLGenerator.cpp  IBLGenerator.h  MeshData.h  MeshLibrary.cpp  MeshLibrary.h  Pipeline.cpp  Pipeline.h  PostProcess.cpp  PostProcess.h  RenderPass.cpp  RenderPass.h  Renderer.cpp  Renderer.h  SwapChain.cpp  SwapChain.h  Texture.cpp  Texture.h  VkDispatch.cpp  VkDispatch.h  VulkanContext.cpp  VulkanContext.h
engine/renderer/d3d11/: VkD3D11.cpp  VkD3D11Handles.h
engine/renderer/d3d12/: D3D12Context.cpp  D3D12Context.h  VkD3D12.cpp  VkD3D12.h  VkD3D12Handles.h  imgui_ps.dxil  imgui_ps.hlsl  imgui_ps_dxil.h  imgui_vs.dxil  imgui_vs.hlsl  imgui_vs_dxil.h
engine/renderer/metal/: SpirvToMSL.cpp  SpirvToMSL.h  VkMetal.mm  VkMetalHandles.h
engine/renderer/opengl/: VkOpenGL.cpp  VkOpenGLHandles.h
engine/scene/: Camera.h  Frustum.cpp  Frustum.h  Node.cpp  Node.h  Scene.cpp  Scene.h  Transform.h
ios-cmake/: CMakeLists.txt  Info.plist.in  main.mm
ios-cmake/Assets.xcassets/AppIcon.appiconset/: Contents.json
scripts/: analyze_capture.py  render_test.bat  verify_android_device.bat  verify_android_device.py  verify_backends.bat  verify_backends.py
tools/shader_compiler/: CMakeLists.txt  main.cpp
